# fp-2017

./: .gitignore  README.md
sem1/: README.md  sem1.cabal
sem1/src/: Main.hs
sem2/: LICENSE  README.md  sem2.cabal
sem2/src/: Main.hs  Solution.hs  Types.hs
