name:                sem1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sem1#readme
license:             BSD3
license-file:        LICENSE
author:              Lev Zakharov
maintainer:          l.j.zakharov@gmail.com
copyright:           2017 Lev Zakharov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sem1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
